# email-date-repair

./: .travis.yml  CMakeLists.txt
src/: datetimeparser.cpp  datetimeparser.h  email.cpp  email.h  main.cpp
